# nat-gas-forecaster

./: .gitignore  Makefile  README.md  pyproject.toml
export/: Makefile
export/output/: predictions.csv
export/src/: export.py
features/: Makefile
features/output/: data_features.parquet
features/src/: features.py
forecast/: Makefile
forecast/output/: forecasts.parquet
forecast/src/: forecast.py
import/: Makefile
import/output/: data_raw.parquet
import/src/: import.py
model/: Makefile
model/src/: model.py
notes/: Untitled.ipynb  generate_plots.py  nat_gas_project.ipynb
notes/.ipynb_checkpoints/: nat_gas_project-checkpoint.ipynb
transform/: Makefile
transform/output/: data_clean.parquet
transform/src/: transform.py
