[project]
name = "nat-gas-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "scipy>=1.14.0",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.0",
]
